feat: update text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta
       name="description"
-      content="Sean Michael - Software Engineer specializing in front end development"
+      content="Software Engineer specializing tech leadership, frontend, backend, React, Angular, Node.js, JavaScript, and blockchain"
     />
     <meta property="twitter:account_id" content="197972911" />
     <meta name="twitter:card" content="summary" />
@@ -309,12 +309,12 @@
     <h2 class="subtitle">Software Engineer</h2>
     <p>
       I am a Software Engineer with a track record for building high-quality
-      digital products, forming positive client relationships, and delivering
-      on-time. Although my expertise are anchored in front end development, I'm
-      a voracious learner of new technologies and have gained invaluable
-      professional experience in both design and back end development. When not
-      at my day job, you can usually find me running long distances, traveling
-      in Latin America, or building my own projects at a local coffee shop.
+      digital products, delivering on-time, and leading development teams to
+      success. During my career, I have had the opportunity to tackle a wide
+      range of challenges across the stack and have also gained invaluable
+      professional experience in team leadership and design. When not at my day
+      job, you can usually find me running long distances, traveling in Latin
+      America, or building my own projects at a local coffee shop.
     </p>
     <a class="skills-interests" id="js-chart-activate" href="#"
       >Skills + Interests</a
