feat: update chart

--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
       digital products, delivering on-time, and leading development teams to
       success. During my career, I have had the opportunity to tackle a wide
       range of challenges across the stack and have also gained invaluable
-      professional experience in team leadership and design. When not at my day
-      job, you can usually find me running long distances, traveling in Latin
-      America, or building my own projects at a local coffee shop.
+      professional experience in software leadership and design. When not at my
+      day job, you can usually find me running long distances, traveling in
+      Latin America, or building my own projects at a local coffee shop.
     </p>
     <a class="skills-interests" id="js-chart-activate" href="#"
       >Skills + Interests</a
